<resources>
    <string name="app_name">Camp</string>

    <string name="main_tab_todo_title">Todo</string>
    <string name="main_tab_bookmark_title">Bookmark</string>
    <string name="main_fab_todo_add_content_description">할일 추가 버튼</string>

    <string name="todo_add_title">할일</string>
    <string name="todo_add_content_title_hint">제목</string>
    <string name="todo_add_content_description_hint">내용</string>
    <string name="todo_add_submit">등록</string>
    <string name="todo_modify">수정</string>
    <string name="todo_remove">삭제</string>


</resources>